<resources>
    <string name="app_name">Transport</string>

    <string name="itinarySearchFragment">Itinerary</string>
    <string name="AuthenticationFragment">Authentication</string>
    <string name="ItinaryResultsFragment">Results</string>
    <string name="UserTripHistoryFragment">History</string>
    <string name="ScoreFragment">Score</string>
    <string name="ItinaryOneResultFragment">Result</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="itinary_search_bottom_nav_item">Itinary search</string>
    <string name="itinary_map_bottom_nav_item">Itinary map</string>
    <string name="score_bottom_nav_item">Score</string>
    <string name="user_trip_history_bottom_nav_item">History</string>

    <!--  AUTHENTICATION VIEW  -->
    <string name="authentification_title">Authentication page </string>
    <string name="authentication_login">Login</string>
    <string name="authentication_password">Password</string>
    <string name="authentication_confirm_password">Confirm Password</string>
    <string name="authentication_submit">Submit</string>
    <string name="authentication_or">Or</string>
    <string name="error_credentials_null">All fields must be filled</string>
    <string name="authentication_create_account">Create a new account</string>
    <string name="authentication_signin">Signin existing account</string>
    <string name="authentication_error_credentials">Error: credentials are not correct</string>
    <string name="authentication_error_passwords">Error: passwords don\'t match</string>
    <string name="authentication_error_google">"Error signin with Google</string>
    <string name="authentication_error_create_account">Error creating account: %1$s</string>

    <!--  ITINARY SEARCH VIEW  -->
    <string name="itinary_search_from">From</string>
    <string name="itinary_search_to">To</string>
    <string name="itinary_search_submit">Search</string>
    <string name="itinary_search_list_empty">No result</string>

    <string name="itinary_oneresult_duration">Duration </string>
    <string name="itinary_oneresult_transfers">Transfers </string>


    <string name="itinary_search_no_journey">No results for this search</string>

    <string name="duration">Duration</string>
    <string name="walk">Walk</string>
    <string name="wait">Wait in station</string>
    <string name="toward">Toward</string>

    <string name="set">Set</string>
    <string name="now">Now</string>

    <string name="close">Close</string>
    <string name="tomorow">Tom</string>
    <string name="loading">Loading</string>

    <!--  score VIEW  -->
    <string name="co2emitted">co2 emitted</string>
    <string name="co2notemitted">co2 not emitted</string>
    <string name="level">level</string>
</resources>