<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_authentification"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/itinary_search_from_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/itinary_search_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/itinary_search_from"
            />
        <EditText
            android:id="@+id/itinary_search_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:autofillHints="text"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itinary_search_to_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/itinary_search_from_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/itinary_search_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/itinary_search_to" />

        <EditText
            android:id="@+id/itinary_search_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:autofillHints="text"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <Button
        android:id="@+id/itinary_search_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:enabled="false"
        android:text="@string/itinary_search_submit"
        android:backgroundTint="@color/blue_lagon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itinary_search_to_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placeList"
        android:translationZ="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/itinary_search_submit"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/itinary_search_list_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:background="@drawable/border_background"
        android:textAlignment="center"
        android:text="@string/itinary_search_list_empty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/placeList" />


</androidx.constraintlayout.widget.ConstraintLayout>