<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_authentification">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/auth_coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_actionBar"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/map" />

<!--                <TextView-->
<!--                    android:id="@+id/authentication_title"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_gravity="left"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingLeft="20dp"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="20dp"-->
<!--                    android:layout_marginBottom="30dp"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:text="@string/authentification_title"-->
<!--                    />-->


                <TextView
                    android:id="@+id/login_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="20dp"
                    android:text="@string/authentication_login"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/authentication_login_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="20dp"

                    android:text="@string/authentication_password"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/authentication_password_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/confirm_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/confirm_password_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="20dp"

                        android:text="@string/authentication_confirm_password"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/authentication_confirm_password_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_label" />

                </LinearLayout>


                <Button
                    android:id="@+id/authentication_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/blue_lagon"
                    android:text="@string/authentication_submit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/authentication_or"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/authentication_link_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:text="@string/authentication_create_account"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</ScrollView>
